--- a/packages/shadcn/src/style.css
+++ b/packages/shadcn/src/style.css
@@ -1,11 +1,8 @@
-@import url("@blocknote/react/style.css");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
+.bn-container {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -35,9 +32,9 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
-  }
+}
 
-  .dark {
+.bn-container.dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
@@ -65,52 +62,49 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
-  }
+}
+
+.bn-container * {
+    @apply border-border;
+}
+.bn-editor {
+    @apply bg-background text-foreground;
 }
 
 :focus-visible {
-  outline: none;
+    outline: none;
 }
 
 [data-radix-popper-content-wrapper] {
-  z-index: 99999 !important;
+    z-index: 99999 !important;
 }
 
 .bn-side-menu {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .bn-side-menu .bn-button {
-  padding: 0;
-  height: 24px;
+    padding: 0;
+    height: 24px;
 }
 
 .bn-select {
-  max-height: var(--radix-select-content-available-height);
+    max-height: var(--radix-select-content-available-height);
 }
 
 .bn-menu-dropdown {
-  max-height: var(--radix-dropdown-menu-content-available-height);
+    max-height: var(--radix-dropdown-menu-content-available-height);
 }
 
 .bn-color-picker-dropdown {
-  overflow: auto;
+    overflow: auto;
 }
 
 .bn-suggestion-menu-item[data-hovered] {
-  background-color: hsl(var(--accent));
+    background-color: hsl(var(--accent));
 }
 
 .bn-drag-handle {
-  height: 24px;
+    height: 24px;
 }
-
-/* @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-} */
